force-app/main/default/objects/Desk__c/Desk__c.object-meta.xml
<CustomObject>
    <label>Desk</label>
    <nameField>
        <label>Desk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>