force-app/main/default/objects/Desk__c/fields/Desk_Number__c.field-meta.xml
<CustomField>
    <fullName>Desk_Number__c</fullName>
    <label>Desk Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>