force-app/main/default/objects/Desk__c/fields/Desks__c.field-meta.xml
<CustomField>
    <fullName>Desks__c</fullName>
    <label>Desks</label>
    <referenceTo>Floor__c</referenceTo>
    <relationshipLabel>Desks</relationshipLabel>
    <relationshipName>Desks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>