force-app/main/default/objects/Desk__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any comments about the desk</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>